# EXCELLENCECECPP_FinalProject

hello_drogon/: CMakeLists.txt
hello_drogon/Repository/: OpenAiRepository.cc  UserRepository.cc
hello_drogon/controllers/: UserWithRolesController.cc  UserWithRolesController.h
hello_drogon/public/: index.html
hello_drogon/services/: UserQueries.cc  UserQueries.h  UserService.cc  UserService.h
install/: install_dragon.sh
start_project/: init_db.sql  start_database.txt  start_project.txt
start_project/hello_drogon/: CMakeLists.txt  UsersController.cc  config.json
start_project/hello_drogon/Repository/: OpenAiRepository.cc
start_project/hello_drogon/database/: DatabaseModel.cc  DatabaseModel.h
